Closed
Bug 17765
Opened 26 years ago
Closed 26 years ago
POP: Rename folder does not work
Categories
(MailNews Core :: Backend, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M12
People
(Reporter: fenella, Assigned: jefft)
Details
Linux Redhat 6.0 (1999-11-01-08 M11)
Win32 (1999-11-01-09 M11)
Mac (1999-11-01-08 M11)
Steps:
1. Launch Messenger using the -mail option
2. From the POP account, select a non-special folder
3. Select File|Rename Folder
4. Enter a new folder name in the Rename Folder dialog, click OK.
Actual result: Rename Folder dialog disappears but folder name has not been
changed.
Expected result: the selected folder should be renamed to a new folder name.
This occurs on all 3 platforms in POP account only.
Updated•26 years ago
|
Assignee: phil → jefft
Comment 1•26 years ago
|
||
Jeff, can you look at this?
Comment 3•26 years ago
|
||
Holding M11 for this since it worked in M10
Rename folder has never been implemented for Pop3. I am not sure that we want to
hold this for M11. Things may be complicated in order to make it work.
Comment 5•26 years ago
|
||
I agree with jeff. I don't think we want to hold M11 for this.
My fault - I told Phil that it worked in M10. I'll cc: phil to change the
target milestone accordingly.
Updated•26 years ago
|
Target Milestone: M11 → M12
Comment 7•26 years ago
|
||
Sorry. M12.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Linux Redhat 6.0 (1999-11-23-08 M12)
Win32 (1999-11-23-09 M12)
Mac (1999-11-23-08 M12)
Rename folder works on all platforms now.
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•